--- a/index.html
+++ b/index.html
@@ -9,7 +9,43 @@
 <body>
     <div class="container my-5">
         <h1 class="text-center mb-4">Kym Irwin - Vizsla Breeder</h1>
-        <p class="text-center">Finest quality Vizsla dogs. Great as working dogs or family pets. Puppies available now!</p>
+
+        <section>
+            <h2>Why Choose Vizslas?</h2>
+            <p>
+                The Vizsla is a breed like no other. Known for their stunning rust-colored coats 
+                and soulful eyes, they are both graceful athletes and loyal companions. Whether 
+                you’re looking for a spirited hunting partner or a devoted family pet, Vizslas 
+                excel in every role with their intelligence, trainability, and boundless affection.
+            </p>
+        </section>
+        <section>
+            <h2>Our Commitment to Excellence</h2>
+            <p>
+                We pride ourselves on our commitment to the health, temperament, and conformation of our dogs. 
+                Every Vizsla in our care is a cherished member of our family, and we strive to ensure they thrive in 
+                loving homes. Our puppies are:
+            </p>
+            <ul>
+                <li>Raised in a nurturing, family-oriented environment.</li>
+                <li>Socialized from an early age to develop confidence and adaptability.</li>
+                <li>Health-checked, vaccinated, and microchipped before joining their new families.</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Meet Your New Best Friend</h2>
+            <p>
+                Bringing a Vizsla into your life is more than just adopting a pet; it’s welcoming a lifelong friend. 
+                Each puppy we raise is a testament to our dedication and love for the breed.
+            </p>
+        </section>
+        <section>
+            <h2>Let’s Connect</h2>
+            <p>
+                Are you ready to meet your new best friend? Contact us today to learn more about our available puppies 
+                and upcoming litters. We’re here to answer any questions and help you find the perfect Vizsla to join your family.
+            </p>
+       
         
         <table class="table table-bordered mt-4">
             <thead class="table-light">
