--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kym Irwin - Vizsla Breeder</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        /* Styling for the banner */
+        .banner {
+            background-color: #800000; /* Replace with your desired color */
+            color: white; /* Optional: text color */
+            text-align: center; /* Optional: center the text inside the banner */
+            padding: 20px; /* Optional: space inside the banner */
+        }
+    </style>
 </head>
 <body>
-    <div class="container my-5">
+    <div class="banner" >
         <h1 class="text-center mb-4">Kym Irwin - Vizsla Breeder</h1>
-
+    </div>
+    <div></div>
         <section>
             <h2>Why Choose Vizslas?</h2>
             <p>
