--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="banner" >
         <h1 class="text-center mb-4">Kym Irwin - Vizsla Breeder</h1>
     </div>
-    <div></div>
+    <div class="container my-5">
         <section>
             <h2>Why Choose Vizslas?</h2>
             <p>
